# config/app.js
@@ -9,6 +9,7 @@ const Chats = require("../routes/chats.routes")
 const Auth = require("../routes/auth.routes")
 const Admins = require("../routes/admins.routes")
 const Statistic = require("../routes/statistics.routes")
+const onlineUsers= require("../routes/onlineUsers.routes")
 const swaggerUi = require("swagger-ui-express");
 const fs = require("fs");
 const yaml = require("yaml");
@@ -28,13 +29,11 @@ app.use(express.urlencoded({ limit: 1024 * 1024 * 10, extended: true }));
 
 const swaggerDocument = yaml.parse(fs.readFileSync("./config/docs/swagger.yml", "utf8"));
 app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
-
-
 app.use("/users", Users);
 app.use("/admins", Admins);
 app.use("/chats",Chats)
 app.use("/roles",Roles)
 app.use("/auth",Auth)
 app.use("/statistics",Statistic)
-
+app.use("/online-count",onlineUsers)
 module.exports = app;
